# anarcrypt.sol

./: .gitignore  .gitmodules  .pnp.cjs  README.md  file_structure.txt  package-lock.json  package.json
anaheim/: package.json  tsconfig.json
anaheim/anchor/: Anchor.toml  Cargo.toml
anaheim/anchor/programs/onchain-voting/: Cargo.toml
anaheim/anchor/programs/onchain-voting/src/: lib.rs
anaheim/src/components/ui/: ui-layout.tsx
anna_heim/: package-lock.json
anna_heim/anchor/: Anchor.toml
anna_heim/anchor/programs/anna_heim/: Cargo.toml
anna_heim/anchor/programs/anna_heim/src/: lib.rs
anna_heim/anchor/src/: anna_heim-exports.ts  index.ts
anna_heim/anchor/tests/: anna_heim.spec.ts
annaheim/: README.md  package-lock.json  package.json  tsconfig.json
annaheim/anchor/: Cargo.toml  deply-logs.tzt
annaheim/anchor/programs/addin-api/: Cargo.toml
annaheim/anchor/programs/addin-mock/program/: Cargo.toml
annaheim/anchor/programs/annaheim/: Cargo.toml
annaheim/anchor/programs/chat/program/: Cargo.toml
annaheim/anchor/programs/onchain-voting/: Cargo.toml
annaheim/anchor/programs/program/: Cargo.toml
annaheim/anchor/programs/program/src/tools/: spl_token.rs
annaheim/anchor/programs/sha256-hasher/: Cargo.toml
annaheim/anchor/tests/: annaheim.spec.ts
annaheim/src/app/: layout.tsx
annaheim/src/components/ui/: ui-layout.tsx
backend/: Cargo.toml
eco-subsystem/: anaheim-recovery.json
eco-subsystem/sns/sns-integration/: Cargo.toml  client.mjs  package.json  pnpm-lock.yaml
frontend/: README.md  package-lock.json  package.json
frontend/anchor/: Anchor.toml
frontend/anchor/programs/frontend/src/: lib.rs
frontend/anchor/programs/solanadapp/src/: lib.rs
frontend/anchor/src/: frontend-exports.ts  solanadapp-exports.ts
frontend/anchor/tests/: solanadapp.spec.ts
frontend/solana-dapp/.next/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/games/: page.tsx
frontend/src/app/payments/: page.tsx
frontend/src/app/posts/: page.tsx
frontend/src/app/profiles/: page.tsx
frontend/src/app/voting/: page.tsx
frontend/src/components/dashboard/: dashboard-feature.tsx
frontend/src/components/frontend/: frontend-data-access.tsx
frontend/src/components/solanadapp/: solanadapp-data-access.tsx
frontend/src/components/ui/: ui-layout.tsx
programs/dependencies/: criterion  platform-tools
programs/sns-integration/: Cargo.toml  package-lock.json  package.json
programs/test_program/: Cargo.toml
scripts/: deploy.sh
