[workspace]
members = [
    "programs/sha256-hasher",
    "programs/addin-api",
    "programs/addin-mock/program",
    "programs/chat/program",
    "programs/program",
    "programs/test-sdk",
    "programs/tools",
    "programs/onchain-voting",
    "programs/annaheim"
]
[profile.dev]
split-debuginfo = "unpacked"

# Remplacez par la version correcte si disponible
# The curve25519-dalek crate uses the `simd` backend by default in v4 if
# possible, which has very slow performance on some platforms with opt-level 0,
# which is the default for `dev` and `test` builds. This slowdown causes
# certain interactions in the solana-test-validator, such as verifying ZK
# proofs in transactions, to take much more than 400ms, creating problems in
# the test environment. To give better performance in the solana-test-validator
# during tests and dev builds, override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
solana-program = { git = "https://github.com/anza-xyz/solana-sdk.git",  branch = "master" }
solana-pubkey = { git = "https://github.com/anza-xyz/solana-sdk.git", rev = "991954602e718d646c0d28717e135314f72cdb78" }
solana-sha256-hasher = { git = "https://github.com/anza-xyz/agave.git", branch = "v2.1", version = "=2.1.15" }
# solana-pubkey = { git = "https://github.com/anza-xyz/agave.git", branch = "v2.1" }
# solana-sdk = { git = "https://github.com/anza-xyz/agave.git", branch = "v2.1" }
# solana-bpf-loader-program = { git = "https://github.com/anza-xyz/agave.git", branch = "v2.1" }
# solana-client = { git = "https://github.com/anza-xyz/agave.git", branch = "v2.1" }
# crossbeam-epoch = { git = "https://github.com/anza-xyz/crossbeam", rev = "fd279d707025f0e60951e429bf778b4813d1b6bf" }

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false
