[package]
name = "sns-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.1.2"
solana-program = "2.1.4"  # Update this to match the locked version
solana-pubkey = "2.1.4"
getrandom = { version = "0.2", features = ["linux_disable_fallback"] }

[lib]
crate-type = ["cdylib", "lib"]
