[package]
name = "sns-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "=1.18.26"
blake3 = "=1.5.5"  # Updated to required version
borsh = "=1.5.3"
solana-security-txt = "=1.1.1"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "sns-integration"
path = "src/main.rs"
