[package]
name = "spl-governance-addin-api"
version = "0.1.4"
description = "Solana Program Library Governance Addin Api"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
borsh = "1.5.3"
spl-governance-tools = { version = "0.1.4", path = "../tools" }
solana-program = "=2.1"
solana-pubkey = { version = "2.1", optional = true}
sha2 = { version = "0.10", optional = true }
solana-sha256-hasher = { version = "2.2.1", optional = true }

[features]
default = []
sha256-hasher = ["dep:solana-sha256-hasher"]

